# fuzzy-logic

./: README.md  pyproject.toml
src/: fuzzy_system.py  ga_cli.py  genetic_algorithm.py  streamlit_app.py
src/fuzzy_problem/: fuzzy_data.csv  fuzzy_data_generated.csv  fuzzy_system.py  generate_fuzzy_data.py  streamlit_app.py
src/genetic_algorithm/: ga_cli.py  genetic_algorithm.py
