[project]
name = "fuzzy-expert-system"
version = "1.0.0"
description = "Fuzzy Expert System with Genetic Algorithm Bonus Implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-fuzzy>=0.4.2",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
